cert-manager-nginx-demo/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
   - host: workout.ibari.ch
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-helm-nginx-demo
              port:
                number: 80
  tls:
  - secretName: workout-ibari-ch-tls
